cmake_minimum_required(VERSION 3.12)
project(Dmvcca)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -Wall -Wno-long-long -Wno-unused-variable -Wno-variadic-macros -pedantic -O2")
include_directories(googletest/include/ benchmark/ycsb/ common/ system/ utils/ protocol/ ./)

if(APPLE)
    find_package(glog REQUIRED)
    find_package(gflags REQUIRED)
    link_libraries(${jemalloc_lib} glog::glog gflags)
else()
    link_libraries(${jemalloc_lib} glog gflags)
endif()

add_executable(Dmvcca test.cpp)